InSCAPE/OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/gisdefs.h


int G_read_raster_cats(const char *, const char *, struct Categories *);

int G_read_vector_cats(const char *, const char *, struct Categories *);

CELL G_number_of_cats(const char *, const char *);

CELL G__read_cats(const char *, const char *, const char *,
		  struct Categories *, int);

char *G_get_cats_title(const struct Categories *);

char *G_get_raster_cats_title(const struct Categories *);

char *G_get_cat(CELL, struct Categories *);

char *G_get_c_raster_cat(CELL *, struct Categories *);

char *G_get_f_raster_cat(FCELL *, struct Categories *);

char *G_get_d_raster_cat(DCELL *, struct Categories *);

char *G_get_raster_cat(void *, struct Categories *, RASTER_MAP_TYPE);

int G_unmark_raster_cats(struct Categories *);

int G_mark_c_raster_cats(CELL *, int, struct Categories *);

int G_mark_f_raster_cats(FCELL *, int, struct Categories *);

int G_mark_d_raster_cats(DCELL *, int, struct Categories *);

int G_mark_raster_cats(void *, int, struct Categories *, RASTER_MAP_TYPE);

int G_rewind_raster_cats(struct Categories *);

char *G_get_next_marked_d_raster_cat(struct Categories *, DCELL *, DCELL *,
				     long *);

char *G_get_next_marked_c_raster_cat(struct Categories *, CELL *, CELL *,
				     long *);

char *G_get_next_marked_f_raster_cat(struct Categories *, FCELL *, FCELL *,
				     long *);

char *G_get_next_marked_raster_cat(struct Categories *, void *, void *,
				   long *, RASTER_MAP_TYPE);

int G_set_cat(CELL, char *, struct Categories *);

int G_set_c_raster_cat(CELL *, CELL *, char *, struct Categories *);

int G_set_f_raster_cat(FCELL *, FCELL *, char *, struct Categories *);

int G_set_d_raster_cat(DCELL *, DCELL *, char *, struct Categories *);

int G_set_raster_cat(void *, void *, char *, struct Categories *,
		     RASTER_MAP_TYPE);

int G_write_cats(char *, struct Categories *);

int G_write_raster_cats(char *, struct Categories *);

int G_write_vector_cats(char *, struct Categories *);

int G__write_cats(char *, char *, struct Categories *);

char *G_get_ith_d_raster_cat(const struct Categories *, int, DCELL *,
			     DCELL *);

char *G_get_ith_f_raster_cat(const struct Categories *, int, void *, void *);