OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/gis.py


# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 144
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_read_raster_cats'):
    G_read_raster_cats = _libs['grass_gis.6.4.2RC2'].G_read_raster_cats
    G_read_raster_cats.restype = c_int
    G_read_raster_cats.argtypes = [String, String, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 145
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_read_vector_cats'):
    G_read_vector_cats = _libs['grass_gis.6.4.2RC2'].G_read_vector_cats
    G_read_vector_cats.restype = c_int
    G_read_vector_cats.argtypes = [String, String, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 146
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_number_of_cats'):
    G_number_of_cats = _libs['grass_gis.6.4.2RC2'].G_number_of_cats
    G_number_of_cats.restype = CELL
    G_number_of_cats.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 147
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G__read_cats'):
    G__read_cats = _libs['grass_gis.6.4.2RC2'].G__read_cats
    G__read_cats.restype = CELL
    G__read_cats.argtypes = [String, String, String, POINTER(struct_Categories), c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 149
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_cats_title'):
    G_get_cats_title = _libs['grass_gis.6.4.2RC2'].G_get_cats_title
    G_get_cats_title.restype = ReturnString
    G_get_cats_title.argtypes = [POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 150
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_raster_cats_title'):
    G_get_raster_cats_title = _libs['grass_gis.6.4.2RC2'].G_get_raster_cats_title
    G_get_raster_cats_title.restype = ReturnString
    G_get_raster_cats_title.argtypes = [POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 151
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_cat'):
    G_get_cat = _libs['grass_gis.6.4.2RC2'].G_get_cat
    G_get_cat.restype = ReturnString
    G_get_cat.argtypes = [CELL, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 152
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_c_raster_cat'):
    G_get_c_raster_cat = _libs['grass_gis.6.4.2RC2'].G_get_c_raster_cat
    G_get_c_raster_cat.restype = ReturnString
    G_get_c_raster_cat.argtypes = [POINTER(CELL), POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 153
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_f_raster_cat'):
    G_get_f_raster_cat = _libs['grass_gis.6.4.2RC2'].G_get_f_raster_cat
    G_get_f_raster_cat.restype = ReturnString
    G_get_f_raster_cat.argtypes = [POINTER(FCELL), POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 154
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_d_raster_cat'):
    G_get_d_raster_cat = _libs['grass_gis.6.4.2RC2'].G_get_d_raster_cat
    G_get_d_raster_cat.restype = ReturnString
    G_get_d_raster_cat.argtypes = [POINTER(DCELL), POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 155
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_raster_cat'):
    G_get_raster_cat = _libs['grass_gis.6.4.2RC2'].G_get_raster_cat
    G_get_raster_cat.restype = ReturnString
    G_get_raster_cat.argtypes = [POINTER(None), POINTER(struct_Categories), RASTER_MAP_TYPE]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 156
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_unmark_raster_cats'):
    G_unmark_raster_cats = _libs['grass_gis.6.4.2RC2'].G_unmark_raster_cats
    G_unmark_raster_cats.restype = c_int
    G_unmark_raster_cats.argtypes = [POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 157
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_mark_c_raster_cats'):
    G_mark_c_raster_cats = _libs['grass_gis.6.4.2RC2'].G_mark_c_raster_cats
    G_mark_c_raster_cats.restype = c_int
    G_mark_c_raster_cats.argtypes = [POINTER(CELL), c_int, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 158
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_mark_f_raster_cats'):
    G_mark_f_raster_cats = _libs['grass_gis.6.4.2RC2'].G_mark_f_raster_cats
    G_mark_f_raster_cats.restype = c_int
    G_mark_f_raster_cats.argtypes = [POINTER(FCELL), c_int, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 159
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_mark_d_raster_cats'):
    G_mark_d_raster_cats = _libs['grass_gis.6.4.2RC2'].G_mark_d_raster_cats
    G_mark_d_raster_cats.restype = c_int
    G_mark_d_raster_cats.argtypes = [POINTER(DCELL), c_int, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 160
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_mark_raster_cats'):
    G_mark_raster_cats = _libs['grass_gis.6.4.2RC2'].G_mark_raster_cats
    G_mark_raster_cats.restype = c_int
    G_mark_raster_cats.argtypes = [POINTER(None), c_int, POINTER(struct_Categories), RASTER_MAP_TYPE]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 161
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_rewind_raster_cats'):
    G_rewind_raster_cats = _libs['grass_gis.6.4.2RC2'].G_rewind_raster_cats
    G_rewind_raster_cats.restype = c_int
    G_rewind_raster_cats.argtypes = [POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 162
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_next_marked_d_raster_cat'):
    G_get_next_marked_d_raster_cat = _libs['grass_gis.6.4.2RC2'].G_get_next_marked_d_raster_cat
    G_get_next_marked_d_raster_cat.restype = ReturnString
    G_get_next_marked_d_raster_cat.argtypes = [POINTER(struct_Categories), POINTER(DCELL), POINTER(DCELL), POINTER(c_long)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 164
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_next_marked_c_raster_cat'):
    G_get_next_marked_c_raster_cat = _libs['grass_gis.6.4.2RC2'].G_get_next_marked_c_raster_cat
    G_get_next_marked_c_raster_cat.restype = ReturnString
    G_get_next_marked_c_raster_cat.argtypes = [POINTER(struct_Categories), POINTER(CELL), POINTER(CELL), POINTER(c_long)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 166
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_next_marked_f_raster_cat'):
    G_get_next_marked_f_raster_cat = _libs['grass_gis.6.4.2RC2'].G_get_next_marked_f_raster_cat
    G_get_next_marked_f_raster_cat.restype = ReturnString
    G_get_next_marked_f_raster_cat.argtypes = [POINTER(struct_Categories), POINTER(FCELL), POINTER(FCELL), POINTER(c_long)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 168
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_next_marked_raster_cat'):
    G_get_next_marked_raster_cat = _libs['grass_gis.6.4.2RC2'].G_get_next_marked_raster_cat
    G_get_next_marked_raster_cat.restype = ReturnString
    G_get_next_marked_raster_cat.argtypes = [POINTER(struct_Categories), POINTER(None), POINTER(None), POINTER(c_long), RASTER_MAP_TYPE]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 170
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_set_cat'):
    G_set_cat = _libs['grass_gis.6.4.2RC2'].G_set_cat
    G_set_cat.restype = c_int
    G_set_cat.argtypes = [CELL, String, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 171
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_set_c_raster_cat'):
    G_set_c_raster_cat = _libs['grass_gis.6.4.2RC2'].G_set_c_raster_cat
    G_set_c_raster_cat.restype = c_int
    G_set_c_raster_cat.argtypes = [POINTER(CELL), POINTER(CELL), String, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 172
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_set_f_raster_cat'):
    G_set_f_raster_cat = _libs['grass_gis.6.4.2RC2'].G_set_f_raster_cat
    G_set_f_raster_cat.restype = c_int
    G_set_f_raster_cat.argtypes = [POINTER(FCELL), POINTER(FCELL), String, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 173
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_set_d_raster_cat'):
    G_set_d_raster_cat = _libs['grass_gis.6.4.2RC2'].G_set_d_raster_cat
    G_set_d_raster_cat.restype = c_int
    G_set_d_raster_cat.argtypes = [POINTER(DCELL), POINTER(DCELL), String, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 174
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_set_raster_cat'):
    G_set_raster_cat = _libs['grass_gis.6.4.2RC2'].G_set_raster_cat
    G_set_raster_cat.restype = c_int
    G_set_raster_cat.argtypes = [POINTER(None), POINTER(None), String, POINTER(struct_Categories), RASTER_MAP_TYPE]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 176
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_write_cats'):
    G_write_cats = _libs['grass_gis.6.4.2RC2'].G_write_cats
    G_write_cats.restype = c_int
    G_write_cats.argtypes = [String, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 177
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_write_raster_cats'):
    G_write_raster_cats = _libs['grass_gis.6.4.2RC2'].G_write_raster_cats
    G_write_raster_cats.restype = c_int
    G_write_raster_cats.argtypes = [String, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 178
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_write_vector_cats'):
    G_write_vector_cats = _libs['grass_gis.6.4.2RC2'].G_write_vector_cats
    G_write_vector_cats.restype = c_int
    G_write_vector_cats.argtypes = [String, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 179
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G__write_cats'):
    G__write_cats = _libs['grass_gis.6.4.2RC2'].G__write_cats
    G__write_cats.restype = c_int
    G__write_cats.argtypes = [String, String, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 180
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_ith_d_raster_cat'):
    G_get_ith_d_raster_cat = _libs['grass_gis.6.4.2RC2'].G_get_ith_d_raster_cat
    G_get_ith_d_raster_cat.restype = ReturnString
    G_get_ith_d_raster_cat.argtypes = [POINTER(struct_Categories), c_int, POINTER(DCELL), POINTER(DCELL)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 182
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_ith_f_raster_cat'):
    G_get_ith_f_raster_cat = _libs['grass_gis.6.4.2RC2'].G_get_ith_f_raster_cat
    G_get_ith_f_raster_cat.restype = ReturnString
    G_get_ith_f_raster_cat.argtypes = [POINTER(struct_Categories), c_int, POINTER(None), POINTER(None)]
